# matter_qrcode_generator

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  index.html
.github/workflows/: ci.yml  deploy.yml
matter_qrcode_generator/: Cargo.toml
matter_qrcode_generator/src/: base38.rs  cli.rs  lib.rs  main.rs  onboarding_payload.rs  qr.rs
matter_qrcode_generator_wasm/: .eslintrc.json  Cargo.toml  README.md  eslint.config.mjs  package-lock.json  package.json  webpack.config.js
matter_qrcode_generator_wasm/src/: lib.rs
matter_qrcode_generator_wasm/www/: index.html
matter_qrcode_generator_wasm/www/css/: style.css
matter_qrcode_generator_wasm/www/js/: app.js
src/: base38.rs  cli.rs  main.rs  onboarding_payload.rs  qr.rs
