[package]
name = "matter-qrcode-generator"
version = "0.1.0"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
description = "QR-code generator for Matter"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["cargo", "derive"] }
env_logger = "0.10"
matter-iot = { git = "https://github.com/project-chip/matter-rs" }
