[package]
name = "matter_qrcode_generator"
version = "0.1.0"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
description = "QR-code generator for Matter"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitvec = "1.0"
clap = { version = "4.3", features = ["cargo"] }
image = "0.25"
qrcode = "0.14"
regex = "1.11"