[package]
name = "matter_qrcode_generator_wasm"
version = "0.1.0"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
description = "QR-code generator Wasm for Matter"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1.0"
js-sys = "0.3"
matter_qrcode_generator = { path = "../matter_qrcode_generator", version = "0.1" }
qrcode = { version = "0.12", default-features = false, features = ["svg"] }
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4", optional = true }
